# quay

./: .gitignore  CLAUDE.md  Cargo.toml  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: spike_a_blit.rs  spike_c_pty.rs
i18n/: quay.pot
i18n/pt-BR/LC_MESSAGES/: quay.po
locales/: en.yml  pt-BR.yml
scripts/: i18n-update.sh
src/: app.rs  file_tree.rs  hotkeys.rs  i18n.rs  main.rs  process.rs  quick_actions.rs  settings.rs
src/agents/: claude.rs  claude_code.rs  claude_resume.rs  claude_stats.rs  json_session.rs  mod.rs  opencode.rs  stream_json.rs
src/editor/: buffer.rs  mod.rs
src/git/: diff.rs  mod.rs  naming.rs  status.rs  worktree.rs
src/kanban/: deps.rs  labels.rs  mod.rs  model.rs  projects.rs  store.rs
src/persistence/: mod.rs  paths.rs  schema.rs
src/terminal/: detect.rs  font.rs  input.rs  mod.rs  render.rs  replay.rs  session.rs
src/util/: errors.rs  log.rs  mod.rs
src/wiring/: context.rs  editor_callbacks.rs  helpers.rs  hotkey_callbacks.rs  kanban_refresh.rs  label_dep_callbacks.rs  mod.rs  project_callbacks.rs  refreshes.rs  settings_callbacks.rs  tab_callbacks.rs  task_callbacks.rs  validation.rs
ui/: data.slint  main.slint  tokens.slint
ui/components/: atoms.slint  card_context_menu.slint  cards.slint  chat_view.slint  description_panel.slint  files_panel.slint  git_changes_panel.slint  history_panel.slint  kanban_grid.slint  menu.slint  new_project_modal.slint  new_task_modal.slint  right_pane.slint  settings_modal.slint  settings_page.slint  shortcuts_overlay.slint  sidebar.slint  status_bar.slint  tab_context_menu.slint  task_search_modal.slint  terminal_view.slint  title_bar.slint  toast.slint
