[package]
name = "quay"
version = "0.1.0"
edition = "2024"
description = "Cross-platform native workspace where AI coding agents dock in parallel berths"
license = "MIT OR Apache-2.0"

[[bin]]
name = "quay"
path = "src/main.rs"

[dependencies]
# UI framework (GPU-accelerated via Skia)
slint = { version = "1.15", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-skia",
    "compat-1-2",
] }

# PTY and terminal emulation
portable-pty = "0.9"
alacritty_terminal = "=0.26.0"

# Font rasterization for the glyph atlas
fontdue = "0.9"

# Git integration
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

# Persistence
rusqlite = { version = "0.39", features = ["bundled"] }

# OS-aware directories
directories = "6"

# Concurrency primitives
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Error handling + logging
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
which = "6"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[build-dependencies]
slint-build = "1.15"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[[example]]
name = "spike_a_blit"
path = "examples/spike_a_blit.rs"

[[example]]
name = "spike_c_pty"
path = "examples/spike_c_pty.rs"
