[package]
name = "quay"
version = "0.1.0"
edition = "2024"
description = "Cross-platform native workspace where AI coding agents dock in parallel berths"
license = "MIT OR Apache-2.0"

[[bin]]
name = "quay"
path = "src/main.rs"

[dependencies]
# UI framework (GPU-accelerated via Skia)
slint = { version = "1.15", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-skia",
    "compat-1-2",
] }

# PTY and terminal emulation
portable-pty = "0.9"
alacritty_terminal = "=0.26.0"

# Font rasterization for the glyph atlas
fontdue = "0.9"

# Git integration
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

# Persistence
rusqlite = { version = "0.39", features = ["bundled"] }

# OS-aware directories
directories = "6"

# Concurrency primitives
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Error handling + logging
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
which = "6"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

# Form validation — declarative #[validate(...)] attributes on form
# structs. Used by `src/wiring/validation.rs` to surface inline field
# errors in the modal forms (NewTask / NewProject / DescriptionPanel).
validator = { version = "0.20", features = ["derive"] }

# Phase 7 editor
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
ropey = "1"

[build-dependencies]
slint-build = "1.15"
lucide-slint = "1.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"

# An optimized-but-fast-to-build profile for iteration. Keeps opt-level=3 so
# the binary runs at release-like speed, but drops LTO and uses the default
# parallel codegen-units so rebuilds are minutes instead of 10-15 minutes.
# Use this for smoke tests, multi-worktree agent sessions, and any workflow
# that needs a working binary but not a ship-quality one.
#   cargo build --profile release-fast
#   ./target/release-fast/quay
[profile.release-fast]
inherits = "release"
lto = "off"
codegen-units = 16
debug = 0
strip = "debuginfo"

# Reduce debug info from full DWARF to line tables only. Backtraces still
# show file:line, but the debug binary drops from ~430 MB to ~50-80 MB and
# the link step skips relocating hundreds of MB of debug sections. Measured
# ~30–50% off incremental rebuild time on this project.
[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"

# Optimize all dependencies (Skia, libgit2, SQLite, syntect, etc.) at -O3 even
# in dev/test builds. User code stays at opt-level=0 so it's cheap to recompile,
# but hot paths in the deps (SQLite queries, regex in syntect, libgit2 walks)
# run at release speed during `cargo test`. First build after this change is
# slower (+5–10 min, one-time cost); subsequent rebuilds don't pay it again.
[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

# Build scripts and proc-macros (slint-macros is the heaviest) also benefit —
# slint DSL compilation noticeably speeds up with optimized build-override.
[profile.dev.build-override]
opt-level = 3

[profile.test.build-override]
opt-level = 3

[[example]]
name = "spike_a_blit"
path = "examples/spike_a_blit.rs"

[[example]]
name = "spike_c_pty"
path = "examples/spike_c_pty.rs"
